# Ultra-Low-Power-Computer-Vision-for-Social-Robots

./: .gitignore  README.md
TensorFlow/: ConfusionMatrix.py  Dataset.py  ModelPicture.py  Train.py  Visual.py  Youtube.py
TensorFlow/export/: BSB-PicoVision.tflite  SerialLog.txt  best.keras  best_thresholds.npy  confusion_stats.json  metadata.json  model_data.h  model_summary.txt  training_history.csv  val_class_metrics.csv  val_predictions.csv
ThingPlus-TFMicro-CatDogPerson/: CMakeLists.txt  Dataset.py  Visual.py
ThingPlus-TFMicro-CatDogPerson/export/: SmallMobileNetV2.tflite  metadata.json  model_data.h  training_history.csv  val_class_metrics.csv  val_predictions.csv
ThingPlus-TFMicro-CatDogPerson/pico-tflmicro/: CMakeLists.txt
ThingPlus-TFMicro-CatDogPerson/src/: jpeg_decoder.cpp  jpeg_decoder.h  main.cpp  model_data.cc  model_metadata.h  oled_ssd1306.cpp  oled_ssd1306.h
ThingPlus-TFMicro-CatDogPerson/src/Arducam/: ArducamCamera.c  Arducam_Mega.h  cam_spi_master.h
ThingPlus-TFMicro-CatDogPerson/src/export/: AdvancedMobileNetV2.tflite  TrainV5.py  comprehensive_report.txt  model_metadata.json  stage1_history.csv  stage2_history.csv
datasets/coco/: balance_report.txt  balanced_multilabel_val.csv
